--- a/webexam2024/kasse.html
+++ b/webexam2024/kasse.html
@@ -7,23 +7,23 @@
     <title>Kasse</title>
 </head>
 <body id="grid-container">
-        <header>
-        <div class="searchBarFlexContainer">
-            <input class="searchBar" type="search" placeholder="søk her">
-            <img class="searchIcon" src="searchIcon.png" alt="searchIcon">
-        </div>
+    <header>
+        <form class="searchBarFlexContainer">
+            <input class="searchBar" type="search" id="searchBar" name="searchBar" placeholder="søk her">
+            <img class="searchIcon" src="searchIcon.png" alt="search icon">
+        </form>
         <nav>
             <ul class="headerNavFlex">
                 <li class="listFlex"><a href="index.html">Hjem</a></li>
-                <li class="listFlex"><a href="products.html">Produkter</a></li>
+                <li class="listFlex"><a href="#grid-container-products">Produkter</a></li>
                 <li class="logoFlex"><a href="index.html">Logo</a></li>
-                <li class="listFlex"><a href="categories.html">Kategorier</a></li>
-                <li class="listFlex"><a href="">Kontakt oss</a></li>
+                <li class="listFlex"><a href="#categories">Kategorier</a></li>
+                <li class="listFlex"><a href="#footer">Kontakt oss</a></li>
             </ul>
             <ul class="headerNavIconFlex">
                 <li class="listFlex"><a href=""><img src="userIcon.png" alt="user icon"></a></li>
                 <li class="listFlex"><a href=""><img src="heartIcon.png" alt="heart icon"></a></li>
-                <li class="listFlex"><a href=""><img src="cartIcon.png" alt="cart icon"></a></li>
+                <li class="listFlex"><a href="kasse.html"><img src="cartIcon.png" alt="cart icon"></a></li>
             </ul>
         </nav>
     </header>
@@ -34,7 +34,7 @@
         <div class="productArticleFlexContainer">
             <article>
                 <figure class="productImage">
-                    <img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image">
+                    <a href="produkt.html"><img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image"></a>
                     <figcaption>Produkt navn</figcaption>
                 </figure>
                 <p class="removeMargin">Kr 1999</p>
@@ -42,7 +42,7 @@
             </article>
             <article>
                 <figure class="productImage">
-                    <img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image">
+                    <a href="produkt.html"><img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image"></a>
                     <figcaption>Produkt navn</figcaption>
                 </figure>
                 <p class="removeMargin">Kr 1999</p>
@@ -50,7 +50,7 @@
             </article>
             <article>
                 <figure class="productImage">
-                    <img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image">
+                    <a href="produkt.html"><img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image"></a>
                     <figcaption>Produkt navn</figcaption>
                 </figure>
                 <p class="removeMargin">Kr 1999</p>
@@ -60,11 +60,11 @@
         <h2 class="mediumBold largeFont marginTop">2. DINE OPPLYSNINGER</h2>
         <h3>Leveringsadresse</h3>
         <form class="opplysningerFlexContainer">
-            <input class="opplysningerFlexItem" type="text" placeholder="Fornavn*">
-            <input class="opplysningerFlexItem" type="text" placeholder="Etternavn*">
-            <input class="opplysningerFlexItem" type="text" placeholder="Gateadresse*">
-            <input class="opplysningerFlexItem" type="text" placeholder="Postnummer*">
-            <input class="opplysningerFlexItem" type="text" placeholder="By*">
+            <input class="opplysningerFlexItem" type="text" id="fname" name="fname" placeholder="Fornavn*">
+            <input class="opplysningerFlexItem" type="text" id="sname" name="sname" placeholder="Etternavn*">
+            <input class="opplysningerFlexItem" type="text" id="adress" name="adress" placeholder="Gateadresse*">
+            <input class="opplysningerFlexItem" type="text" id="zip" name="zip" placeholder="Postnummer*">
+            <input class="opplysningerFlexItem" type="text" id="city" name="city" placeholder="By*">
         </form>
         <button class="lagreButton marginTop marginBottom">Lagre</button><br>
         <a><u>Avbryt</u></a>
@@ -81,12 +81,12 @@
         <h2 class="mediumBold largeFont marginTop">4. BETALING</h2>
         <h3>BETAL MED KORT</h3>
         <form class="opplysningerFlexContainer">
-            <p class="removeMargin">Kortnummer</p>
-            <input class="betalningFlexItem" type="text" placeholder="342342****4435">
-            <p class="removeMargin">Utløpsdato</p>
-            <input class="betalningFlexItem" type="text" placeholder="mm/dd/yyyy">
-            <p class="removeMargin">CVC/CVV</p>
-            <input class="betalningFlexItem" type="text" placeholder="CVC/CVV">
+            <label class="removeMargin" for="cardNum">Kortnummer</label>
+            <input class="betalningFlexItem" type="text" id="cardNum" name="cardNum" placeholder="342342****4435">
+            <label class="removeMargin" for="cardName">Utløpsdato</label>
+            <input class="betalningFlexItem" type="text" id="cardDate" name="cardDate" placeholder="mm/dd/yyyy">
+            <label class="removeMargin" for="cardCVC">CVC/CVV</label>
+            <input class="betalningFlexItem" type="text" id="cardCVC" name="cardCVC" placeholder="CVC/CVV">
         </form>
         <p class="removeMargin">Å betale inkl. mva.</p>
         <p class="removeMargin">1 199 kr</p>
@@ -103,7 +103,7 @@
         </form>
     </section>
     </main>
-    <footer>
+    <footer id="footer">
         <hr>
         <h2 class="headText mediumBold">Logo</h2>
         <p class="underText">Suspendisse ullamcorper eget ad praesent sodales maximus dolor.</p>
