--- a/webexam2024/produkt.html
+++ b/webexam2024/produkt.html
@@ -7,23 +7,23 @@
     <title>Produkt</title>
 </head>
 <body id="grid-container">
-        <header>
-        <div class="searchBarFlexContainer">
-            <input class="searchBar" type="search" placeholder="søk her">
-            <img class="searchIcon" src="searchIcon.png" alt="searchIcon">
-        </div>
+    <header>
+        <form class="searchBarFlexContainer">
+            <input class="searchBar" type="search" id="searchBar" name="searchBar" placeholder="søk her">
+            <img class="searchIcon" src="searchIcon.png" alt="search icon">
+        </form>
         <nav>
             <ul class="headerNavFlex">
                 <li class="listFlex"><a href="index.html">Hjem</a></li>
-                <li class="listFlex"><a href="products.html">Produkter</a></li>
+                <li class="listFlex"><a href="#grid-container-products">Produkter</a></li>
                 <li class="logoFlex"><a href="index.html">Logo</a></li>
-                <li class="listFlex"><a href="categories.html">Kategorier</a></li>
-                <li class="listFlex"><a href="">Kontakt oss</a></li>
+                <li class="listFlex"><a href="#categories">Kategorier</a></li>
+                <li class="listFlex"><a href="#footer">Kontakt oss</a></li>
             </ul>
             <ul class="headerNavIconFlex">
                 <li class="listFlex"><a href=""><img src="userIcon.png" alt="user icon"></a></li>
                 <li class="listFlex"><a href=""><img src="heartIcon.png" alt="heart icon"></a></li>
-                <li class="listFlex"><a href=""><img src="cartIcon.png" alt="cart icon"></a></li>
+                <li class="listFlex"><a href="kasse.html"><img src="cartIcon.png" alt="cart icon"></a></li>
             </ul>
         </nav>
     </header>
@@ -32,22 +32,22 @@
     <div class="productArticleFlexContainer">
         <article>
             <figure class="productImage removeMargin">
-                <img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image">
+                <a href="produkt.html"><img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image"></a>
             </figure>
         </article>
         <article>
             <figure class="productImage removeMargin">
-                <img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image">
+                <a href="produkt.html"><img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image"></a>
             </figure>
         </article> 
         <article>
             <figure class="productImage removeMargin">
-                <img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image">
+                <a href="produkt.html"><img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image"></a>
             </figure>
         </article> 
         <article>
             <figure class="productImage removeMargin">
-                <img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image">
+                <a href="produkt.html"><img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image"></a>
             </figure>
         </article> 
         <details open="open">
@@ -60,42 +60,42 @@
         <div class="lignendeProdukterFlexBox">
             <h2 class="productHeader headText removeMarginBottom">Lignende produkter</h2>
             <article class="productImage">
-                <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
+                <a href="produkt.html"><img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image"></a>
                 <section class="alignItemsRow">
                     <p class="largeFontOverride">Produkt navn</p>
                     <p>Kr 1999</p>
                 </section>
             </article>
             <article class="productImage">
-                <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
+                <a href="produkt.html"><img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image"></a>
                 <section class="alignItemsRow">
                     <p class="largeFontOverride">Produkt navn</p>
                     <p>Kr 1999</p>
                 </section>
             </article>
             <article class="productImage">
-                <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
+                <a href="produkt.html"><img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image"></a>
                 <section class="alignItemsRow">
                     <p class="largeFontOverride">Produkt navn</p>
                     <p>Kr 1999</p>
                 </section>
             </article>
             <article class="productImage">
-                <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
+                <a href="produkt.html"><img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image"></a>
                 <section class="alignItemsRow">
                     <p class="largeFontOverride">Produkt navn</p>
                     <p>Kr 1999</p>
                 </section>
             </article>
             <article class="productImage">
-                <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
+                <a href="produkt.html"><img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image"></a>
                 <section class="alignItemsRow">
                     <p class="largeFontOverride">Produkt navn</p>
                     <p>Kr 1999</p>
                 </section>
             </article>
             <article class="productImage">
-                <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
+                <a href="produkt.html"><img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image"></a>
                 <section class="alignItemsRow">
                     <p class="largeFontOverride">Produkt navn</p>
                     <p>Kr 1999</p>
@@ -104,7 +104,7 @@
         </div>
     </div>
     </main>
-    <footer>
+    <footer id="footer">
         <hr>
         <h2 class="headText mediumBold">Logo</h2>
         <p class="underText">Suspendisse ullamcorper eget ad praesent sodales maximus dolor.</p>
