made smaller changes to header and footer

--- a/webexam2024/index.html
+++ b/webexam2024/index.html
@@ -15,9 +15,9 @@
         <nav>
             <ul class="headerNavFlex">
                 <li class="listFlex"><a href="index.html">Hjem</a></li>
-                <li class="listFlex"><a href="#grid-container-products">Produkter</a></li>
+                <li class="listFlex"><a href="index.html#grid-container-products">Produkter</a></li>
                 <li class="logoFlex"><a href="index.html">Logo</a></li>
-                <li class="listFlex"><a href="#categories">Kategorier</a></li>
+                <li class="listFlex"><a href="index.html#categories">Kategorier</a></li>
                 <li class="listFlex"><a href="#footer">Kontakt oss</a></li>
             </ul>
             <ul class="headerNavIconFlex">
@@ -189,7 +189,7 @@
             <p class="underText removeMargin">Produkter</p>
             <p class="underText removeMargin">Kategorier</p>
             <p class="underText removeMargin">Kontakt Oss</p>
-            <a class="underText removeMargin">Tilgjengelighetserklæring</a>
+            <a href="Mal – WCAG-ssjekkliste for utfylling av tilgjengelighetserklæring for nettløsning 24.01.2024.xlsx" class="underText removeMargin">Tilgjengelighetserklæring</a>
         </address>
         <h2 class="headText mediumBold marginTop removeMarginBottom">SOSIALE MEDIER</h2>
         <address class="contactInfoFlexContainer">
