--- a/webexam2024/produkt.html
+++ b/webexam2024/produkt.html
@@ -15,9 +15,9 @@
         <nav>
             <ul class="headerNavFlex">
                 <li class="listFlex"><a href="index.html">Hjem</a></li>
-                <li class="listFlex"><a href="#grid-container-products">Produkter</a></li>
+                <li class="listFlex"><a href="index.html#grid-container-products">Produkter</a></li>
                 <li class="logoFlex"><a href="index.html">Logo</a></li>
-                <li class="listFlex"><a href="#categories">Kategorier</a></li>
+                <li class="listFlex"><a href="index.html#categories">Kategorier</a></li>
                 <li class="listFlex"><a href="#footer">Kontakt oss</a></li>
             </ul>
             <ul class="headerNavIconFlex">
@@ -111,19 +111,19 @@
         <section class="contactInfoFlexContainer">
             <h2 class="headText mediumBold marginTop">Kontakt</h2>
             <address>
-                <img class="iconSize" src="addressIcon.png" alt="address icon">
+                <img class="iconSize" src="addressIcon.png" alt="address ikon">
                     <p class="underText lightBold removeMargin"><b>Adresse:</b> B R A Veien 4, 1757 Halden</p>
             </address>
             <address>
-                <img class="iconSize" src="phoneIcon.png" alt="phone icon">
+                <img class="iconSize" src="phoneIcon.png" alt="telefon ikon">
                     <p class="underText lightBold removeMargin"><b>Telefon:</b> <a href="tel:69608000">69 60 80 00</a></p>
             </address>
             <address>
-                <img class="iconSize" src="emailIcon.png" alt="email icon">
+                <img class="iconSize" src="emailIcon.png" alt="email ikon">
                     <p class="underText lightBold removeMargin"><b>E-post:</b> <a href="mailto:halden@hiof.no">halden@hiof.no</a></p>
             </address>
             <address>
-                <img class="iconSize" src="clockIcon.png" alt="clock icon">
+                <img class="iconSize" src="clockIcon.png" alt="klokke ikon">
                     <p class="underText lightBold removeMargin"><b>Åpningstider:</b> Stenger 15:00</p>
             </address>
         </section>
@@ -132,13 +132,14 @@
             <p class="underText removeMargin">Produkter</p>
             <p class="underText removeMargin">Kategorier</p>
             <p class="underText removeMargin">Kontakt Oss</p>
+            <a href="Mal – WCAG-ssjekkliste for utfylling av tilgjengelighetserklæring for nettløsning 24.01.2024.xlsx" class="underText removeMargin">Tilgjengelighetserklæring</a>
         </address>
         <h2 class="headText mediumBold marginTop removeMarginBottom">SOSIALE MEDIER</h2>
         <address class="contactInfoFlexContainer">
-            <img class="iconSize marginTop" src="instagramIcon.png" alt="instagram icon">
-            <img class="iconSize" src="facebookIcon.png" alt="facebook icon">
-            <img class="iconSize" src="linkedinIcon.png" alt="linkedin icon">
-            <img class="iconSize" src="pinterestIcon.png" alt="pinterest icon">
+            <img class="iconSize marginTop" src="instagramIcon.png" alt="instagram ikon">
+            <img class="iconSize" src="facebookIcon.png" alt="facebook ikon">
+            <img class="iconSize" src="linkedinIcon.png" alt="linkedin ikon">
+            <img class="iconSize" src="pinterestIcon.png" alt="pinterest ikon">
         </address>
     </footer>
 </body>
