--- a/webexam2024/produkt.html
+++ b/webexam2024/produkt.html
@@ -132,7 +132,7 @@
             <p class="underText removeMargin">Produkter</p>
             <p class="underText removeMargin">Kategorier</p>
             <p class="underText removeMargin">Kontakt Oss</p>
-            <a href="Mal – WCAG-ssjekkliste for utfylling av tilgjengelighetserklæring for nettløsning 24.01.2024.xlsx" class="underText removeMargin">Tilgjengelighetserklæring</a>
+            <a href="Mal–WCAG-ssjekkliste_for_utfylling_av_tilgjengelighetserklæring_for_nettløsning_24.01.2024.xlsx" class="underText removeMargin">Tilgjengelighetserklæring</a>
         </address>
         <h2 class="headText mediumBold marginTop removeMarginBottom">SOSIALE MEDIER</h2>
         <address class="contactInfoFlexContainer">
