fixed breadcrumbs on produkt.html

--- a/webexam2024/kasse.html
+++ b/webexam2024/kasse.html
@@ -135,10 +135,10 @@
         </address>
         <h2 class="headText mediumBold marginTop removeMarginBottom">SOSIALE MEDIER</h2>
         <address class="contactInfoFlexContainer">
-            <img class="iconSize marginTop" src="instagramIcon.png" alt="instagram ikon">
-            <img class="iconSize" src="facebookIcon.png" alt="facebook ikon">
-            <img class="iconSize" src="linkedinIcon.png" alt="linkedin ikon">
-            <img class="iconSize" src="pinterestIcon.png" alt="pinterest ikon">
+            <a href="https://www.instagram.com/"><img class="iconSize marginTop" src="instagramIcon.png" alt="instagram ikon"></a>
+            <a href="https://www.facebook.com/"><img class="iconSize" src="facebookIcon.png" alt="facebook ikon"></a>
+            <a href="https://www.linkedin.com/"><img class="iconSize" src="linkedinIcon.png" alt="linkedin ikon"></a>
+            <a href="https://no.pinterest.com/"><img class="iconSize" src="pinterestIcon.png" alt="pinterest ikon"></a>
         </address>
     </footer>
 </body>
