--- a/webexam2024/produkt.html
+++ b/webexam2024/produkt.html
@@ -28,7 +28,13 @@
         </nav>
     </header>
     <main>
-    <p class="breadCrumbs removeMarginBottom">Hjem  >  Kategori  >  <b>Produktnavn</b></p>
+    <nav class="breadCrumbs">
+        <a href="index.html">Hjem</a>
+        <p>></p>
+        <a href="index.html#grid-container-products">Produkter</a>
+        <p>></p>
+        <a href="index.html#categories"><b>Kategori</b></a>
+    </nav>
     <div class="productArticleFlexContainer">
         <article>
             <figure class="productImage removeMargin">
@@ -136,10 +142,10 @@
         </address>
         <h2 class="headText mediumBold marginTop removeMarginBottom">SOSIALE MEDIER</h2>
         <address class="contactInfoFlexContainer">
-            <img class="iconSize marginTop" src="instagramIcon.png" alt="instagram ikon">
-            <img class="iconSize" src="facebookIcon.png" alt="facebook ikon">
-            <img class="iconSize" src="linkedinIcon.png" alt="linkedin ikon">
-            <img class="iconSize" src="pinterestIcon.png" alt="pinterest ikon">
+            <a href="https://www.instagram.com/"><img class="iconSize marginTop" src="instagramIcon.png" alt="instagram ikon"></a>
+            <a href="https://www.facebook.com/"><img class="iconSize" src="facebookIcon.png" alt="facebook ikon"></a>
+            <a href="https://www.linkedin.com/"><img class="iconSize" src="linkedinIcon.png" alt="linkedin ikon"></a>
+            <a href="https://no.pinterest.com/"><img class="iconSize" src="pinterestIcon.png" alt="pinterest ikon"></a>
         </address>
     </footer>
 </body>
