fixed errors in kasse.html inputs and links in footer

--- a/webexam2024/index.html
+++ b/webexam2024/index.html
@@ -186,9 +186,9 @@
         </section>
         <h2 class="headText mediumBold marginTop">Snarveier</h2>
         <address class="contactInfoFlexContainer">
-            <p class="underText removeMargin">Produkter</p>
-            <p class="underText removeMargin">Kategorier</p>
-            <p class="underText removeMargin">Kontakt Oss</p>
+            <a href="index.html#grid-container-products" class="underText removeMargin">Produkter</a>
+            <a href="index.html#categories" class="underText removeMargin">Kategorier</a>
+            <a href="#footer" class="underText removeMargin">Kontakt Oss</a>
             <a href="Mal–WCAG-ssjekkliste_for_utfylling_av_tilgjengelighetserklæring_for_nettløsning_24.01.2024.xlsx" class="underText removeMargin">Tilgjengelighetserklæring</a>
         </address>
         <h2 class="headText mediumBold marginTop removeMarginBottom">SOSIALE MEDIER</h2>
