--- a/webexam2024/kasse.html
+++ b/webexam2024/kasse.html
@@ -83,8 +83,8 @@
         <form class="opplysningerFlexContainer">
             <label class="removeMargin" for="cardNum">Kortnummer</label>
             <input class="betalningFlexItem" type="number" id="cardNum" name="cardNum" placeholder="342342****4435">
-            <label class="removeMargin" for="cardName">Utløpsdato</label>
-            <input class="betalningFlexItem" type="month" id="cardDate" name="cardDate" placeholder="mm/dd/yyyy">
+            <label class="removeMargin" for="cardDate">Utløpsdato</label>
+            <input class="betalningFlexItem" type="date" id="cardDate" name="cardDate" >
             <label class="removeMargin" for="cardCVC">CVC/CVV</label>
             <input class="betalningFlexItem" type="number" id="cardCVC" name="cardCVC" placeholder="CVC/CVV">
         </form>
@@ -128,9 +128,9 @@
         </section>
         <h2 class="headText mediumBold marginTop">Snarveier</h2>
         <address class="contactInfoFlexContainer">
-            <p class="underText removeMargin">Produkter</p>
-            <p class="underText removeMargin">Kategorier</p>
-            <p class="underText removeMargin">Kontakt Oss</p>
+            <a href="index.html#grid-container-products" class="underText removeMargin">Produkter</a>
+            <a href="index.html#categories" class="underText removeMargin">Kategorier</a>
+            <a href="#footer" class="underText removeMargin">Kontakt Oss</a>
             <a href="Mal–WCAG-ssjekkliste_for_utfylling_av_tilgjengelighetserklæring_for_nettløsning_24.01.2024.xlsx" class="underText removeMargin">Tilgjengelighetserklæring</a>
         </address>
         <h2 class="headText mediumBold marginTop removeMarginBottom">SOSIALE MEDIER</h2>
